index basic structure v2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="header-logo">
             <img>
         </div>
         <nav>
@@ -18,10 +18,13 @@
                 <li>Quiénes somos</li>
             </ul>
             <div class="language-menu">
-
+                <ul>
+                    <li>EUS</li>
+                    <li>ENG</li>
+                </ul>
             </div>
             <div class="basket-btn">  <!-- botón para ir al carrito -->
-
+                    <img>
             </div>
         </nav>
     
