index basic structure v4

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <section class="cover">
             <h1>RetroDenda</h1>
             <h4>Estilo retro, actitud moderna</h4>
-            <div class="time-and-date">            </div>            
+            <div class="time-and-date">
+            </div>            
         </section>
 
         <section class="products-viewer">
