--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-logo">
-            <img>
+            <img src="assets/img/Logoretrodenda-provisional.webp">
         </div>
         <nav>
             <ul>
@@ -33,7 +33,7 @@
     <main>
         <section class="cover">
             <h1>RetroDenda</h1>
-            <h4>Estilo retro, actitud moderna</h4>
+            <h4>Estilo retro, actitud moderna.</h4>
             <div class="time-and-date">
             </div>            
         </section>
@@ -60,13 +60,14 @@
 
         </div>
         <div class="page-info">
-
+            <p>Contáctanos en nuestras redes sociales:</p>
         </div>
     </footer>
 
-    <endfooter>
+    <div class="endfooter">
         <p>(c) 2025 Hilos i</p>
-    </endfooter>
+    </div>
+
 
     <script src="assets/js/main.js"></script>
 </body>
