--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda Vintage - Productos</title>
-    <link rel="stylesheet" href="../css/productos.css">
-      <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/assets/css/productos.css">
+      <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 <header>
