--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,12 +62,16 @@
 
 
 <!--PRODUCTOS-->
+        <section class="container">
+            <figure id="caja">
+                <img class="caja-img" src="/assets/img/bolsos/bolso-azul.jpg" alt="">
+                <figcaption class="caja-informacion">
+                    <h5>Bolso Azul</h5>
+                    <p><strong>€ 35</strong></p>
+                </figcaption>
+            </figure>
+        </section>
 
-        <div class="container">
-            <div id="caja"></div>
-        </div> 
-            
-    
 
 
 
