Modificaciones hechas por frontend

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,14 +62,7 @@
 
 
 <!--PRODUCTOS-->
-        <section class="container">
-            <figure id="caja">
-                <img class="caja-img" src="/assets/img/bolsos/bolso-azul.jpg" alt="">
-                <figcaption class="caja-informacion">
-                    <h5>Bolso Azul</h5>
-                    <p><strong>€ 35</strong></p>
-                </figcaption>
-            </figure>
+        <section id="container">
         </section>
 
 
