Plantilla literal inicial de productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,12 +62,9 @@
 
 
 <!--PRODUCTOS-->
+        <section id="container">
+        </section>
 
-        <div class="container">
-            <div id="caja"></div>
-        </div> 
-            
-    
 
 
 
