quitar carpeta de assets

--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>detalle de producto</title>
-    <link rel="stylesheet" href="../css/Detalle.css">
+    <link rel="stylesheet" href="../assets/css/Detalle.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     
     
 
- <script src="../js/detalle.js"></script>
+ <script src="../assets/js/detalle.js"></script>
 
 </body>
 </html>
