--- a/pages/productos.html
+++ b/pages/productos.html
@@ -78,6 +78,7 @@
     <p>&copy; 2025 Hilos i</p>
 </div>
 
-<script src="/assets/js/productos.js"></script>
+
+<script type="module" src="../assets/js/productos.js"></script>
 </body>
 </html>
