--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -9,20 +9,20 @@
 
 <body>
     <a href="productos.html">Productos</a>
-    <a href="camisas.html">camisas</a>
+    <a href="camisas.html" id="categoria"></a>
     <!-- tarjeta del producto -->
     <div class="contenedor">
     <!--imagen-->
-        <img src="" class="foto" id="foto" alt="imagen producto">
+        <img src="" class="foto" id="foto" alt="">
         <div>
-    <!--informacion-->
-            <div class="cuadro">
+            <!--informacion-->
+            <div class="cuadro" id="cuadro">
                 <h2 id="nombre">nombre del producto</h2>
                 <p id="descripcion">descripcion</p>
                 <p id="talla">talla</p>
                 <p id="precio">precio</p>
             </div>
-    <!--añadir al carrito-->
+            <!--añadir al carrito-->
             <div class="cuadro">
                 <h2>cantidad:</h2>
                 <div class="cuadro">
@@ -53,8 +53,9 @@
 </div>
     
     
-
+ <script src="../assets/js/main.js"></script>
  <script src="../assets/js/detalle.js"></script>
+
 
 </body>
 </html>
