modificacion del producto.js

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -78,7 +78,8 @@
     <p>&copy; 2025 Hilos i</p>
 </div>
 
-
+    
+ <script type="module" src="../assets/js/main.js"></script>
 <script type="module" src="../assets/js/productos.js"></script>
 </body>
 </html>
