--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>detalle de producto</title>
     <link rel="stylesheet" href="../assets/css/Detalle.css">
+     <link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 
 <body>
 
+ <header>
     <div class="header-logo">
         <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
     </div>
@@ -29,11 +31,12 @@
             <img src="/assets/img/" alt="Carrito">
         </div>
     </nav>
+</header>
 
 
 
-    <a href="productos.html">Productos</a>
-    <a href="camisas.html" id="categoria"></a>
+    <a href="productos.html">Volver a productos</a>
+    <a href="" id="categoria"></a>
 
 
     <!-- tarjeta del producto -->
@@ -71,6 +74,7 @@
     <div style="margin: auto; border-style: solid; width: 80%;">
         <p>Has añadido un producto al carrito</p>
         <a href="nnn.html">ir a carrito</a>
+        <br>
         <button id="borrarcarrito">Borrar carrito</button>
         <button id="cerrarmodal">Seguir comprando</button>
     </div>
@@ -80,20 +84,25 @@
 </div>
     
     
+
+
+
+
+    <footer>
+        <div class="footer-logo"></div>
+        <div class="page-info">
+            <p>Contáctanos en nuestras redes sociales:</p>
+        </div>
+    </footer>
+    <div class="endfooter">
+        <p>&copy; 2025 Hilos i</p>
+    </div>
+
+
  <script src="../assets/js/main.js"></script>
  <script type="module" src="../assets/js/detalle.js"></script>
-
-
 </body>
 
 
-        <footer>
-    <div class="footer-logo"></div>
-    <div class="page-info">
-        <p>Contáctanos en nuestras redes sociales:</p>
-    </div>
-</footer>
-<div class="endfooter">
-    <p>&copy; 2025 Hilos i</p>
-</div>
+
 </html>
