Modal creado, inclui 2 fotos a img para la elaboración de este y 2 archivos nvos css-js, ademas de 4lineas codig al index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Tienda Vintage</title>
     <script>
@@ -69,6 +71,9 @@
                 <img>                
             </div>
         </section>
+        
+        <!-- AQUI ESTOY COLOCANDO LA LINEA QUE LLAMA AL MODAL -->
+         <div id="modal-container"></div>
 
     </main>
 
@@ -86,7 +91,7 @@
         <p>(c) 2025 Hilos i</p>
     </div>
 
-
+    <script src="assets/js/modal.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
