etiqueta para el SEO

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--  MEJORAR EL SEO -->
+    <meta name="description" content="Tienda de ropa vintage con prendas únicas. Moda retro, auténtica y sostenible que marca tu estilo. Ofertas exclusivas.">
+    <link rel="shortcut icon" href="assets/img/Logoretrodenda-provisional.webp" type="image/x-icon">
     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Tienda Vintage</title>
+    <title>RetroDenda | Ropa Vintage y Retro</title>
     <script>
         const url = "https://jsonplaceholder.typicode.com/todos/1";
         fetch(url)
@@ -71,7 +74,7 @@
                 <img>                
             </div>
         </section>
-        
+
         <!-- AQUI ESTOY COLOCANDO LA LINEA QUE LLAMA AL MODAL -->
          <div id="modal-container"></div>
 
