--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -47,16 +47,17 @@
     <h2>Tu producto</h2>
     <div class="contenedor">
         <!--imagen-->
-        <img src="" class="foto" id="foto" alt="">
-
-        <div>
+        <div class="cuadrofoto">
+            <img src="" class="foto" id="foto" alt="">
+        </div>
+        <div class="cuadroinfo">
             <!--informacion-->
-            <div class="cuadro" id="cuadro">
+            <div class="cuadrotexto" id="cuadro">
             </div>
-            <!--añadir al carrito-->
-            <div class="cuadro">
+            <!--botones-->
+            <div class="cuadrotexto">
                 <h2>cantidad:</h2>
-                <div class="cuadro">
+                <div>
                     <button id="botonsumar" style="display: inline;">+</button>
                     <p id="cantidad" style="display: inline;">cantidad</p>
                     <button id="botonrestar" style="display: inline;">-</button>
