cart update 2 9dic2025

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -45,8 +45,9 @@
         <section class="cart-summary">
     
             <h2>Resumen</h2>
-            <p>Subtotal: <span id="subtotal"></span> €</p>
-            <button class="btn btn-primary">Proceder al pago</button>
+            <p>Total: <span id="total"></span> €</p>
+            <button class="btn-empty">Vaciar el carrito</button>
+            <button class="btn-checkout">Proceder al pago</button>      <!-- cómo procede al checkout este botón, es un href o es una función de javascript? -->
   
         </section>
 
