cart update 3 9dic2025

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -37,7 +37,7 @@
         <section class="cart-items">
     
             <h2>Productos en tu carrito</h2>
-            <ul id="carrito"></ul>
+            <div id="cart-items"></div>
     
         </section>
 
