--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -13,27 +13,28 @@
 <body>
 
     <!--barra navegacion-->
-    <header>
+      <header>
         <div class="header-logo">
-            <img src="/assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
+            <img src="../assets/img/Logoretrodenda-provisional.webp">
         </div>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Productos</li>
-                <li>Quiénes somos</li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="#">Quiénes somos</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
                     <li>EUS</li>
                     <li>ENG</li>
+                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </div>
-            <div class="basket-btn">
-                <img src="/assets/img/" alt="Carrito">
+            <div class="basket-btn">  <!-- botón para ir al carrito -->
+                    <img>
             </div>
         </nav>
-    </header>
+    </header>  
 
     <!-- el reloj -->
     <div id="reloj">fgdgfgd</div>
