--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda Vintage - Productos</title>
     <link rel="stylesheet" href="/assets/css/productos.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+       <link rel="stylesheet" href="/assets/css/style.css">       
     <script src="https://kit.fontawesome.com/384e83612b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
+  <header>
         <div class="header-logo">
-            <img src="../assets/img/Logoretrodenda-provisional.webp">
+            <img src="assets/img/Logoretrodenda-provisional.webp">
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="pages/productos.html">Productos</a></li>
                 <li><a href="#">Quiénes somos</a></li>
             </ul>
             <div class="language-menu">
@@ -28,11 +28,11 @@
                     <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </div>
-            <div class="basket-btn">  <!-- botón para ir al carrito -->
-                    <img>
+            <div class="basket-btn"> <!-- botón para ir al carrito -->
+                <img>
             </div>
         </nav>
-    </header>     
+    </header>  
 
     <div id="reloj">fgdgfgd</div>
 
@@ -62,16 +62,51 @@
 
 
 
-
+<!-- -------------------------------------------------------------------------------------------
+            DESDE AQUI COMIENZA EL FOOTER 
+-------------------------------------------------------------------------------------------------->
     <footer>
-        <div class="footer-logo"></div>
-        <div class="page-info">
-            <p>Contáctanos en nuestras redes sociales:</p>
+        <div class="footer-container">
+            <section class="footer-section-1">
+                <div>
+                    <h4 class="title-page">RetroDenda</h4>
+                    <figure class="header-logo">
+                        <img src="assets/img/Logoretrodenda-provisional.webp" alt="">
+                    </figure>
+                </div>  
+            </section>
+
+            <section class="footer-section-2">
+                <div>
+                    <ul>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacidad</a></li>
+                    </ul>
+                </div>
+            </section>
         </div>
+        <section class="footer-section-3">
+            <div class="footer-socials">
+                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                    <a href="https://www.facebook.com/?locale=es_ES" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                    <a href="https://x.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <div style="border-right: #FFC59C 4px solid;padding-right: 1rem;">
+                    <a href="https://www.youtube.com/?app=desktop&hl=es" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+                <div>
+                    <a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <p>Copyright 2025 | Hilos i</p>
+        </section>
     </footer>
-    <div class="endfooter">
-        <p>&copy; 2025 Hilos i</p>
-    </div>
 
 
 
