--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
                 <li><a href="#">Quiénes somos</a></li>
             </ul>
             <div class="language-menu">
@@ -63,11 +63,29 @@
 
 
 
-
+ <!-- -------------------------------------------------------------------------------------------
+            DESDE AQUI COMIENZA EL FOOTER 
+-------------------------------------------------------------------------------------------------->
     <footer>
-        <div class="footer-logo"></div>
-        <div class="page-info">
-            <p>Contáctanos en nuestras redes sociales:</p>
+        <div class="footer-container">
+            <section class="footer-section-1">
+                <div>
+                    <h4 class="title-page">RetroDenda</h4>
+                    <figure class="header-logo">
+                        <img src="/assets/img/Logoretrodenda-provisional.webp" alt="">
+                    </figure>
+                </div>  
+            </section>
+
+            <section class="footer-section-2">
+                <div>
+                    <ul>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacidad</a></li>
+                    </ul>
+                </div>
+            </section>
         </div>
         <section class="footer-section-3">
             <div class="footer-socials">
@@ -90,9 +108,6 @@
             <p>Copyright 2025 | Hilos i</p>
         </section>
     </footer>
-    <div class="endfooter">
-        <p>&copy; 2025 Hilos i</p>
-    </div>
 
 
 
