--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>Inicio</li>
                 <li>Productos</li>
                 <li>Quiénes somos</li>
+                <li>Registro</li>
             </ul>
             <div class="language-menu">
                 <ul>
