--- a/index.html
+++ b/index.html
@@ -48,15 +48,10 @@
         <!-- AQUI ESTOY COLOCANDO LA LINEA QUE LLAMA AL CARRUSEL -->
         <section id="carrusel-container"></section>
 
+       <!-- AQUI ESTOY COLOCANDO LA LINEA QUE LLAMA PRODUCTOS DESTACADOS -->
+        <section id="products-destacados"></section>
 
-
-
-        <section class="products-viewer">
-            <h2>Productos destacados</h2>
-            <div class="products-carrousel">
-                <img>
-
-        </section>
+        
 
         <section class="workshop-viewer">
             <h2>Nuestro taller</h2>
@@ -117,5 +112,6 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/modal.js"></script>
     <script src="assets/js/carrusel.js"></script>
+    <script src="assets/js/destacados.js"></script>
 </body>
 </html>
