--- a/pages/cart.html
+++ b/pages/cart.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
     <title>Tienda Vintage</title>
-    <link rel="stylesheet" href="/assets/css/cart.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/cart.css">
+
 </head>
 <body>
     <header>
@@ -46,8 +47,8 @@
     
             <h2>Resumen</h2>
             <p>Total: <span id="total"></span> €</p>
-            <button class="btn-empty">Vaciar el carrito</button>
-            <button class="btn-checkout">Proceder al pago</button>      <!-- cómo procede al checkout este botón, es un href o es una función de javascript? -->
+            <button id="btn-empty">Vaciar el carrito</button>
+            <button id="btn-checkout">Proceder al pago</button>      <!-- cómo procede al checkout este botón, es un href o es una función de javascript? -->
   
         </section>
 
@@ -68,6 +69,6 @@
     </div>
 
 
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/cart.js"></script>
 </body>
 </html>
