cambio de imagen por unas de tamaños todas iguales

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="header-logo">
-            <img src="assets/img/Logoretrodenda-provisional.webp">
+            <img src="assets/img/Logoretrodenda-provisional.webp" alt="Logo RetroDenda">
         </div>
         <nav>
             <ul>
