mejora de css de checkout

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -37,7 +37,7 @@
         <h1>Formulario de compra </h1>
       
 
-        <section class="formCompra">
+        <section>
               
 
              <form action="" class="formCompra" id="formCliente" method="post">
