productos destacados terminado

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <section id="carrusel-container"></section>
 
        <!-- AQUI ESTOY COLOCANDO LA LINEA QUE LLAMA PRODUCTOS DESTACADOS -->
+        <h2 class="subtitulo">Productos destacados</h2>
         <section id="products-destacados"></section>
 
         
