intento de traducir la pagina

--- a/pages/detalleeng.html
+++ b/pages/detalleeng.html
@@ -19,9 +19,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/productos.html">Productos</a></li>
-                <li><a href="#">Quiénes somos</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../pages/productoseng.html">Store</a></li>
+                <li><a href="#">Team</a></li>
             </ul>
             <div class="language-menu">
                 <ul>
@@ -36,23 +36,23 @@
         </nav>
     </header>  
 
-    <!-- el reloj -->
 
-        <br>
+
     <div id="reloj">fgdgfgd</div>
     <br>
 
   <select id="idioma">
-  <option value="" disabled selected>Selecciona idioma</option>
+    <option value="" disabled selected>Selecciona idioma</option>
   <option value="eng">eng</option>
   <option value="esp">esp</option>
 </select>
 
+
     <!-- tarjeta del producto -->
-    <h2>Tu producto</h2>
+    <h2>your product</h2>
 
     <div style="margin-left:1rem; margin-bottom: 1.5rem;">
-        <a href="productos.html" style="text-decoration: none;">Volver a productos</a>
+        <a href="productos.html" style="text-decoration: none;">Return to products</a>
         <p style="display:inline; background-color: #9c5847; color: rgb(255, 255, 255);" id="categoria"></p>
     </div>
 
@@ -67,14 +67,14 @@
             </div>
             <!--botones-->
             <div class="cuadrotexto">
-                <h2>Cantidad:</h2>
+                <h2>Amount:</h2>
                 <div>
                     <button id="botonrestar" class="boton">-</button>
                     <p id="cantidad" style="display: inline;">cantidad</p>
                     <button id="botonsumar" class="boton">+</button>                    
                 </div>
                 <br>
-                <button id="añadir" class="boton2">añadir al carrito</button>
+                <button id="añadir" class="boton2">add to the cart</button>
 
             </div>
         </div>
@@ -82,7 +82,7 @@
 
 
     <!--recomendaciones-->
-    <h2>Tambien te podría gustar</h2>
+    <h2>you might also like</h2>
     <div class="contenedor2" id="contenedor2">
 
     </div>
@@ -93,10 +93,10 @@
         <div class="modal-content">
             <div>
                 <p id="infocompra"></p>
-                <a href="nnn.html" class="boton3">ir a carrito</a>
+                <a href="nnn.html" class="boton3">go to cart</a>
                 <br>
-                <button id="borrarcarrito" class="boton">borrar carrito</button>
-                <button id="seguircompra" class="boton">Seguir comprando</button>
+                <button id="borrarcarrito" class="boton">delete cart</button>
+                <button id="seguircompra" class="boton">Continue shopping</button>
             </div>
         </div>
     </div>
@@ -120,8 +120,8 @@
                 <div>
                     <ul>
                         <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#cookies">Cookies</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Aviso Legal</a></li>
-                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacidad</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#aviso">Legal Notice</a></li>
+                        <li> <i class="fa-solid fa-angle-right"></i> <a href="/pages/legal.html#privacidad">Privacy</a></li>
                     </ul>
                 </div>
             </section>
