apariencia inicio-productos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </header>
-
+    <div id="reloj">fgdgfgd</div>
 
 
     <main>
@@ -54,12 +54,26 @@
 
         
 
-        <section class="workshop-viewer">
-            <h2>Nuestro taller</h2>
-            <div class="workshop-gallery">
-                <img>
-            </div>
+        <section>
+            <h2 class="taller-titulo">Nuestro taller</h2>
+            <article class="subcontainer-taller">
+                <figure>
+                    <img class="taller-img" src="assets/img/nuestro-taller1.jpg" alt="nuestro taller">
+                </figure>
+                <figcaption class="taller-texto"><p> <strong>En este taller, no fabricamos moda: </strong>la descubrimos, la seleccionamos y la preparamos para ti. <br><br>            
+                    Nuestra tienda es un espacio donde la moda vintage cobra vida entre colores, texturas y estilos que se mezclan para crear una experiencia única. <br><br> 
+                    <strong>En RetoDenda</strong>, cada detalle importa. Queremos que cada visita sea un viaje por el pasado, lleno de piezas especiales que destacan por su autenticidad y que están listas para convertirse en tus nuevas favoritas.</p></figcaption>
+            </article>
         </section>
+
+            <article class="subcontainer-taller-dos">
+                <figure>
+                    <img class="taller-img-dos" src="assets/img/nuestro-taller3.jpeg" alt="nuestro taller">
+                </figure>
+                <figcaption class="taller-texto-dos"><p> <strong>Nuestro Taller</strong>, es el espacio donde cuidamos cada detalle antes de que nuestras prendas, calzado y bolsos lleguen a tu manos. <br><br>
+                    Aquí es donde revisamos, limpiamos, clasificamos y preparamos cada pieza para asegurarnos de que mantenga la calidad, el estilo y la esencia vintage que caracteriza a <strong>RetoDenda</strong>. <br><br>
+                    Nuestro entorno combina el encanto de lo antiguo con un ambiente cálido y ordenado. Entre estantes llenos de prendas únicas, mesas donde organizamos accesorios y zonas de selección cuidadosamente iluminadas, trabajamos para que cada artículo conserve su personalidad y esté listo para formar parte de tu estilo.</p></figcaption>
+            </article>
     </main>
 
     <!-- -------------------------------------------------------------------------------------------
@@ -109,7 +123,7 @@
     </footer>
 
 
-
+    <script src="assets/js/fecha.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/modal.js"></script>
     <script src="assets/js/carrusel.js"></script>
